--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-body{
-  /* font-family: "Inter", serif !important; */
+/* body{
+ font-family: "Inter", serif !important; 
   font-family: "Open Sans", serif !important;
-}
+} */
