--- a/src/Components/Regististration/Registration.css
+++ b/src/Components/Regististration/Registration.css
@@ -1,3 +1,7 @@
+* {
+    font-family: "Open Sans", serif !important;
+}
+
 .reg {
    background-image:linear-gradient(to right, #000b1a,#010103ad), url(../Asset/medium-shot-woman-reading-book.jpg) !important;
    background-size: cover;
@@ -10,6 +14,22 @@
     text-decoration: underline !important;
     color: #F38049 !important;
 }
+
+.login, .regis {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: white;
+    font-weight: bold;
+    position: relative;
+    transition: all 0.3s ease;
+  }
+
+ .active-link:focus {
+    border-bottom: 2px solid white !important;
+    padding-bottom: 5px !important;
+  }
 
 @media screen and (max-width:430px) {
     .reg {
